<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   
    android:baselineAligned="false" >

    <ImageView
        android:id="@+id/img_boshlambo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tv_boshDic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_boshlambo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="#2410e6"
        android:text="@string/boshlambo_dic"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_boshDic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/programmer" />

    <TextView
        android:id="@+id/tv_myname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textColor="#d71c29"
        android:text="@string/myname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_myname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/designer" />

    <TextView
        android:id="@+id/tv_aaslalvan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="14dp"
        android:textColor="#d375db"
        android:text="@string/aaslalvan"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_aaslalvan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/academy" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:autoLink="web"
        android:text="@string/siteaddress" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/forum" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:autoLink="web"
        android:text="@string/forumAddress" />

</RelativeLayout>