<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Framelayout to display Fragments -->
   <!--  <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" /> -->
        
<RelativeLayout 
    android:id="@+id/rl_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#7D6791"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="fill_parent"
        android:layout_height="40dp" 
        android:orientation="horizontal"
        android:background="@drawable/header">

        <ImageButton
            android:id="@+id/img_del"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:contentDescription="@string/img_del_description"
            android:src="@android:drawable/ic_delete" 
            android:visibility="invisible" />

        <AutoCompleteTextView
            android:id="@+id/searchbox"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:ems="10"
            android:hint="تایپ کنید"
            android:padding="5dip"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@android:color/white" 
            >

            <requestFocus />
        </AutoCompleteTextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_below="@+id/linearlayout1">

        <Button
            android:id="@+id/btn_floatwindow"
            android:layout_width="wrap_content"
            android:layout_height="70dp"    
            android:background="@drawable/btn_floating" />
        
        <ImageView
                    android:id="@+id/img_speaker"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:paddingLeft="5dp"
                    android:contentDescription="@string/img_copy_description"
                    android:onClick="speakText"
                    android:src="@android:drawable/ic_lock_silent_mode_off" />
        
         <ImageView
                    android:id="@+id/img_copy"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:paddingRight="5dp"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_action_copy" 
                    android:contentDescription="@string/img_speaker_description"/>

    </LinearLayout>
    
		<!-- <RelativeLayout
    			android:id="@+id/rlImg_copy_speak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:layout_below="@+id/linearlayout2">

                

               
            </RelativeLayout> -->
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearlayout2"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/passage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dip"
                android:gravity="right"
                android:textColor="#00ff00"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>

 <!-- Listview to display slider menu -->
    <ListView
        android:id="@+id/list_slidermenu"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@color/aqua"
        android:dividerHeight="1dp"     
        android:listSelector="@drawable/list_selector"
        android:background="@color/DarkGray"/>
    
</android.support.v4.widget.DrawerLayout>
